Apply latest Eclair MPP updates

--- a/.eclair/alice/eclair.conf
+++ b/.eclair/alice/eclair.conf
@@ -1,6 +1,7 @@
 eclair.chain = "regtest"
 eclair.node-alias=alice
 eclair.server.port=9735
+eclair.features="028a8a" # activate MPP
 
 eclair.api.enabled=true
 eclair.api.port=9000
