--- a/.eclair/alice/eclair.conf
+++ b/.eclair/alice/eclair.conf
@@ -12,3 +12,5 @@ eclair.bitcoind.rpcuser=user
 eclair.bitcoind.rpcpassword=password
 eclair.bitcoind.zmqblock="tcp://127.0.0.1:29000"
 eclair.bitcoind.zmqtx="tcp://127.0.0.1:29001"
+
+eclair.on-chain-fees.max-feerate-mismatch=1000
