Add MPP and Trampoline scripts
Update to eclair v0.3.3 which changed the pay APIs slightly.

--- a/.eclair/alice/eclair.conf
+++ b/.eclair/alice/eclair.conf
@@ -3,6 +3,8 @@ eclair.node-alias=alice
 eclair.server.port=9735
 eclair.features="028a8a" # activate MPP
 
+eclair.trampoline-payments-enable=true
+
 eclair.api.enabled=true
 eclair.api.port=9000
 eclair.api.password=password
