--- a/.eclair/bob/eclair.conf
+++ b/.eclair/bob/eclair.conf
@@ -1,6 +1,9 @@
 eclair.chain = "regtest"
 eclair.node-alias=bob
 eclair.server.port=9736
+eclair.features="028a8a" # activate MPP
+
+eclair.trampoline-payments-enable=true
 
 eclair.api.enabled=true
 eclair.api.port=9001
