--- a/.eclair/carol/eclair.conf
+++ b/.eclair/carol/eclair.conf
@@ -1,6 +1,9 @@
 eclair.chain = "regtest"
 eclair.node-alias=carol
 eclair.server.port=9737
+eclair.features="028a8a" # activate MPP
+
+eclair.trampoline-payments-enable=true
 
 eclair.api.enabled=true
 eclair.api.port=9002
