Add bitcoin fallback fee config
And hints on how to enable lnd debug logs.

--- a/.bitcoin/bitcoin.conf
+++ b/.bitcoin/bitcoin.conf
@@ -2,10 +2,10 @@ server=1
 txindex=1
 regtest=1
 
-addresstype=p2sh-segwit
-
 rpcuser=user
 rpcpassword=password
 
 zmqpubrawblock=tcp://127.0.0.1:29000
 zmqpubrawtx=tcp://127.0.0.1:29001
+
+fallbackfee=0.0002
