Update bitcoin conf for eclair 0.6.2
And add a testing script for anchor outputs.
Fix a few old scripts (some RPC had breaking changes).

--- a/.bitcoin/bitcoin.conf
+++ b/.bitcoin/bitcoin.conf
@@ -5,7 +5,7 @@ regtest=1
 rpcuser=user
 rpcpassword=password
 
-zmqpubrawblock=tcp://127.0.0.1:29000
+zmqpubhashblock=tcp://127.0.0.1:29000
 zmqpubrawtx=tcp://127.0.0.1:29001
 
 fallbackfee=0.0002
