--- a/.bitcoin/bitcoin.conf
+++ b/.bitcoin/bitcoin.conf
@@ -5,6 +5,7 @@ regtest=1
 rpcuser=user
 rpcpassword=password
 
+zmqpubrawblock=tcp://127.0.0.1:29000
 zmqpubhashblock=tcp://127.0.0.1:29000
 zmqpubrawtx=tcp://127.0.0.1:29001
 
